temproarily also wait on package excel, to see what filesystem looks like

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -206,9 +206,9 @@ jobs:
   deploy-pypi:
     needs:
       - build-windows
-      - build-linux
       - test-fortran
       - test-python
+      - package-excel
     runs-on: ubuntu-latest
     #if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') }}
     steps:
