--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -210,7 +210,7 @@ jobs:
       - test-python
       - package-excel
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') }}
+    if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') }}
     steps:
     - uses: actions/checkout@v3
     - uses: actions/download-artifact@v3
@@ -226,12 +226,18 @@ jobs:
       run: |
         ls -alh artifacts
         tree
-        ls python-build-*/*
+        ls artifacts/python-build-*/*
 
-
-  build:
+  deploy-github-release:
+    needs:
+      - build-windows
+      - test-fortran
+      - test-python
+      - package-excel
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') }}
+    if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') }}
+    permissions:
+      contents: write
     steps:
     - uses: actions/checkout@v3
     - uses: ncipollo/release-action@v1
