--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -224,9 +224,7 @@ jobs:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
       run: |
-        ls -alh artifacts
-        tree
-        ls artifacts/python-build-*/*
+        twine upload artifacts/python-build-*/*
 
   deploy-github-release:
     needs:
@@ -240,48 +238,18 @@ jobs:
       contents: write
     steps:
     - uses: actions/checkout@v3
+    - uses: actions/download-artifact@v3
+      with:
+        path: artifacts/
+    - name: Package artifacts in zip/tarballs
+      run: |
+        zip zsf-excel-${{ github.ref_name }}.zip artifacts/excel-build/*
+        tar zcf libzsf-${{ github.ref_name }}-linux-amd64.tar.gz artifacts/c-build-linux/*
+        zip -r libzsf-${{ github.ref_name }}-windows-amd64.zip artifacts/c-build-windows-x64/*
+        zip -r libzsf-${{ github.ref_name }}-windows-386.zip artifacts/c-build-windows-x86/*
+        zip -r libzsf-fortran-interface-${{ github.ref_name }}.zip fortran-interface/*
     - uses: ncipollo/release-action@v1
       with:
-        artifacts: "*"
+        artifacts: "artifacts/*.zip,artifacts/*.tar.gz,artifacts/python-build-*/*.whl,"
+        generateReleaseNotes: true
         draft: true
-
-
-  # coverage:
-  #   needs: test
-  #   runs-on: ubuntu-latest
-  #   if: ${{ !startsWith(github.ref, 'refs/tags') }}
-
-  #   steps:
-  #   - uses: actions/checkout@v3
-  #     with:
-  #       submodules: true
-  #   - uses: actions/setup-python@v4
-  #     with:
-  #       python-version: 3.9
-  #   - run: |
-  #       python -m pip install --upgrade pip
-  #       pip install tox
-  #   - run: tox -e coverage
-  #   - uses: codecov/codecov-action@v3
-  #     with:
-  #       file: ./coverage.xml
-
-  # deploy:
-  #   needs: test
-  #   runs-on: ubuntu-latest
-  #   if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') }}
-
-  #   steps:
-  #   - uses: actions/checkout@v3
-  #   - uses: actions/setup-python@v4
-  #     with:
-  #       python-version: 3.9
-  #   - run: |
-  #       python -m pip install --upgrade pip
-  #       pip install setuptools wheel twine
-  #   - env:
-  #       TWINE_USERNAME: __token__
-  #       TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-  #     run: |
-  #       python setup.py sdist bdist_wheel
-  #       twine upload dist/*
