--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,11 +50,11 @@ jobs:
     - uses: actions/checkout@v3
     - name: Get history and tags for SCM versioning to work
       run: |
+        git config --global --add safe.directory '*'
         git fetch --prune --unshallow
         git fetch --depth=1 origin +refs/tags/*:refs/tags/*
     - name: Describe version
       run: |
-        git config --global --add safe.directory /__w/libzsf/libzsf
         git describe --tags --first-parent HEAD
     - name: Build C Library
       # GLIBC 2.31 broke compatibility in that a.o. __exp_finite is no
