--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,14 @@ name: CI
 on:
   pull_request:
   push:
-
+    branches:
+      - 'master'
+      - 'maintenance/*'
+    tags:
+      - 'v[0-9].*'
+  schedule:
+    # Every Wednesday at 6:36 UTC
+    - cron: "36 6 * * 3"
 
 jobs:
   # style-c:
