--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -269,6 +269,6 @@ jobs:
         zip -r libzsf-fortran-interface-${{ github.ref_name }}.zip artifacts/fortran-interface/*
     - uses: ncipollo/release-action@v1
       with:
-        artifacts: "*.zip,*.tar.gz,artifacts/python-build-*/*.whl,"
+        artifacts: "*.zip,*.tar.gz,artifacts/python-build-*/*.whl"
         generateReleaseNotes: true
         draft: true
