--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -224,28 +224,28 @@ jobs:
         gfortran -fdefault-real-8 -o test zsf.f90 test.f90 ../../dist/lib/libzsf-static.a
         ./test
 
-  deploy-pypi:
-    needs:
-      - test-fortran
-      - test-python
-      - package-excel
-    runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') }}
-    steps:
-    - uses: actions/checkout@v3
-    - uses: actions/download-artifact@v3
-      with:
-        path: artifacts/
-    - uses: actions/setup-python@v4
-    - run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel twine
-    - env:
-        TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
-      run: |
-        tree
-        twine upload artifacts/python-build-*/*
+  # deploy-pypi:
+  #   needs:
+  #     - test-fortran
+  #     - test-python
+  #     - package-excel
+  #   runs-on: ubuntu-latest
+  #   if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') }}
+  #   steps:
+  #   - uses: actions/checkout@v3
+  #   - uses: actions/download-artifact@v3
+  #     with:
+  #       path: artifacts/
+  #   - uses: actions/setup-python@v4
+  #   - run: |
+  #       python -m pip install --upgrade pip
+  #       pip install setuptools wheel twine
+  #   - env:
+  #       TWINE_USERNAME: __token__
+  #       TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+  #     run: |
+  #       tree
+  #       twine upload artifacts/python-build-*/*
 
   deploy-github-release:
     needs:
